syntax = "proto3";

package clipboard;

option go_package = "internal/pb";

// The clipboard service definition.
service ClipboardService {
  // Sends a new clipboard item to be saved.
  rpc SaveClipboardItem(SaveRequest) returns (SaveReply) {}

  // Retrieves the clipboard history.
  rpc GetClipboardHistory(GetRequest) returns (GetReply) {}

  // Server streaming RPC to get clipboard updates.
  rpc SubscribeClipboardUpdates(SubscriberRequest) returns (stream ClipboardUpdate) {}

  rpc NotifyClipboardUpdate(NotifyRequest) returns (NotifyReply) {}
}

// The request message containing the clipboard item.
message SaveRequest {
  string item = 1;
}

// The response message containing a confirmation of the save.
message SaveReply {
  bool success = 1;
}

// The request message for getting the clipboard history.
message GetRequest {}

// The response message containing the clipboard history.
message GetReply {
  repeated string items = 1;
}

// The request message for streaming clipboard updates.
message SubscriberRequest {}

// The response message containing the clipboard update.
message ClipboardUpdate {
  repeated string items = 1;
}

// The request message for notifying clipboard updates.
message NotifyRequest {}

// The response message containing a confirmation of the notification.
message NotifyReply {
  bool success = 1;
}
